start page is added

--- a/01 - Product preview card component/productCard.html
+++ b/01 - Product preview card component/productCard.html
@@ -19,7 +19,7 @@
 <body>
 
   <div class="card">
-    <img class="product-img" src="/images/image-product-desktop.jpg" alt="Gabrielle Chanel Paris">
+    <img class="product-img" src="./images/image-product-desktop.jpg" alt="Gabrielle Chanel Paris">
     <div class="text-content">
       <p class="product-name">Perfume</p>
       <h2 class="product-title">Gabrielle Essence Eau De Parfum</h2>
