challenge 1 - add to chart img updated

--- a/01 - Product preview card component/productCard.html
+++ b/01 - Product preview card component/productCard.html
@@ -30,7 +30,7 @@
         <div class="old-price">$169.99</div>
       </div>
       <button class="add-to-chart">
-        <img src="/images/icon-cart.svg" alt="Shopping cart">
+        <img src="./images/icon-cart.svg" alt="Shopping cart">
         Add to Cart
 
       </button>
