second challenge is over

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="/01 - Product preview card component/productCard.html">First Challenge</a>
+    <a href="/02 - FAQ accordion card/challenge2.html">Second Challenge</a>
 </body>
 </html>
