third challenge over

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <a href="/01 - Product preview card component/productCard.html">First Challenge</a>
     <a href="/02 - FAQ accordion card/challenge2.html">Second Challenge</a>
+    <a href="/03 - Stats preview card component/statscard.html">Third Challenge</a>
 </body>
 </html>
